[tool.poetry]
name = "tap-gorgias"
version = "0.0.3"
description = "`tap-gorgias` is a Singer tap for Gorgias, built with the Meltano SDK for Singer Taps."
authors = ["Niall Woodward"]
keywords = [
    "ELT",
    "Gorgias",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
requests = "^2.25.1"
singer-sdk = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.25.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-gorgias = 'tap_gorgias.tap:TapGorgias.cli'
